# panoramic-imitator

./: .gitignore  CMakeLists.txt  Image.cpp  ImageLabel.cpp  Panoramic-video-shoting-simulator.pro  Panoramic-video-shoting-simulator.pro~  PanoramicImage.cpp  PanoramicImage.h  PanoramicImageWidget.cpp  PanoramicImageWidget.h  Panoramic_video_shooting_simulator.sln  README.md  data_structures.h  getpbdata.cpp  getpbdata.h  image.cpp  image.h  image_window.cpp  image_window.h  image_window.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  panoramic-imitator-message.proto  panoramic_image.cpp  panoramic_image.h  panoramic_image_window.cpp  panoramic_image_window.h  panoramic_image_window.ui  pbdata.cpp  pbdata.h  resources.qrc
Panoramic-video-shoting-simulator/: Panoramic-video-shoting-simulator.pro  panoramic_image_widget.cpp  panoramic_image_widget.h
Panoramic_video_shooting_simulator/: Panoramic_video_shooting_simulator.vcxproj  main.cpp
Panoramic_video_shooting_simulator/x64/Debug/: vc120.idb
Panoramic_video_shooting_simulator/x64/Debug/Panorami.E05CE5E5.tlog/: CL.read.1.tlog  CL.write.1.tlog  Panoramic_video_shooting_simulator.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
inc/: Image.h  ImageLabel.h  PanoramicImage.h  image_window.h  mainwindow.h  pbdata.h
protobuf/: panoramic-imitator-message.pb.cc  panoramic-imitator-message.pb.h  panoramic-imitator-message.proto
src/: Image.cpp  ImageLabel.cpp  PanoramicImage.cpp  image_window.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  panoramic_image_window.cpp  pbdata.cpp
src/protobuf/: panoramic-imitator-message.pb.cc  panoramic-imitator-message.pb.h
ui/: mainwindow.ui  panoramic_image_window.ui
x64/Debug/: Panoramic_video_shooting_simulator.ilk
